--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ server.port=8080
 
 spring.application.name=SDA App
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:h2:file:./db/h2db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sda
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database=h2
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
